# LinkedinDataScraper

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  SECURITY.md  app.py  pyproject.toml  readme.md  requirements.txt
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
assets/: brand.md
legacy/: LinkedinScrapper.py
linkedin_scraper/: __init__.py  __main__.py  cli.py  config.py  models.py
linkedin_scraper/auth/: session.py
linkedin_scraper/export/: exporter.py
linkedin_scraper/scraper/: api_interceptor.py  browser.py  profile.py  search.py  selectors.py
linkedin_scraper/utils/: rate_limiter.py
